Nav & banner img done

--- a/index.html
+++ b/index.html
@@ -14,10 +14,36 @@
   <![endif]-->
 </head>
 
-<body>
 
-  
-     
+<!--my code starts-->
+<body>
+<header>
+  <section id ="head">
+    <div class ="top-bar">
+
+      <div class= "navigation">
+          <h1> Fun Bus </h1>
+        <nav>
+          <a href="#"> Home </a>
+          <a href="#"> About Us </a>
+          <a href="#"> Blog</a>
+          <a href="#"> Contact</a>
+        </nav>
+      </div> <!--nav div close-->
+    </div> <!--top-bar div close-->
+ 
+
+<div class="banner">
+<img src="img/fun-bus.jpg" alt="bus banner picture">
+<div> <!--image banner close-->
+
+<div class="info">
+  <h2> Welcome To Fun Bus!</h2>
+  <p> Traveling expedition mordern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure Wordpress wanderlust theme blogger website expedition theme travelblogger. Adventure fun travel pretty design website epedition. </p>
+
+</section> <!--head section close-->
+</header> <!--header section end-->
+
   <div class="container home">
    
     <section class="content-section">
